--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords" content="大家租赁" />
-    <meta name="description" content="工程机械一站式服务专家！" />
+    <meta name="keywords" content="表格查询-接口测试" />
+    <meta name="description" content="L4大屏的表格查询测试" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
@@ -15,7 +15,7 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>Ant Design Pro</title>
+    <title>表格查询-接口测试</title>
     <link
       rel="icon"
       href="<%= context.config.publicPath +'favicon.ico'%>"
