--- a/src/pages/intelligentCommand/components/UploadList/index.less
+++ b/src/pages/intelligentCommand/components/UploadList/index.less
@@ -6,18 +6,39 @@
   margin-left: 2vw;
   padding: 0 1vw;
   border: 1px solid rgba(162, 161, 161, 0.6);
-  .button {
-    position: absolute;
-    bottom: 10px;
-    width: 32vw;
-    height: 60px;
-    margin-top: 32px;
-    color: #fff;
-    background-color: #0365ce;
+  :global(.ant-upload-list-item) {
+    margin-top: 30px;
   }
-  // :global {
-  //   .ant-upload-list-item-info > span {
-  //     width: 90%;
-  //   }
-  // }
+  .file {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-weight: 500;
+  }
+  .explain {
+    position: absolute;
+    top: 100px;
+    left: 20px;
+    font-weight: 500;
+  }
+  .submit {
+    position: absolute;
+    top: 100px;
+    right: 20px;
+    color: #0365ce;
+    cursor: pointer;
+  }
+  .link {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #0365ce;
+    cursor: pointer;
+  }
+  .text {
+    position: absolute;
+    top: 130px;
+    width: calc(100% - 40px);
+    height: calc(100% - 150px);
+  }
 }
